--- a/deno.json
+++ b/deno.json
@@ -1,32 +1,30 @@
 {
+  "homepage": "https://melanke.github.io/clickup-broadview",
   "tasks": {
     "dev": "deno run -A --node-modules-dir=auto npm:vite",
-    "build": "deno run -A --node-modules-dir=auto npm:vite build",
-    "server:start": "deno run -A --node-modules-dir --watch ./server/main.ts",
-    "serve": "deno task build && deno task server:start"
+    "build": "deno run -A --node-modules-dir=auto npm:vite build"
   },
   "imports": {
     "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.0",
     "@oak/oak": "jsr:@oak/oak@^17.1.3",
     "@std/assert": "jsr:@std/assert@1",
+    "@tanstack/react-query": "npm:@tanstack/react-query@^5.62.0",
     "@types/react": "npm:@types/react@^18.3.12",
     "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.3.3",
+    "autoprefixer": "npm:autoprefixer@^10.4.20",
+    "postcss": "npm:postcss@^8.4.49",
     "react": "npm:react@^18.3.1",
     "react-dom": "npm:react-dom@^18.3.1",
     "react-router-dom": "npm:react-router-dom@^6.28.0",
-    "vite": "npm:vite@^5.4.11"
+    "tailwindcss": "npm:tailwindcss@^3.4.15",
+    "vite": "npm:vite@^5.4.11",
+    "preact": "https://esm.sh/preact@10.15.1",
+    "preact/": "https://esm.sh/preact@10.15.1/",
+    "react-icons/fa": "https://cdn.jsdelivr.net/gh/urielch/react-icons-fa@1.0.9/mod.ts"
   },
   "compilerOptions": {
-    "types": [
-      "react",
-      "react-dom",
-      "@types/react"
-    ],
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "deno.ns"
-    ],
+    "types": ["react", "react-dom", "@types/react"],
+    "lib": ["dom", "dom.iterable", "deno.ns"],
     "jsx": "react-jsx",
     "jsxImportSource": "react"
   }
